objects/Daily_Sales__c.object
<CustomObject>
    <description>Object used to store Sales data for use with Reporting/Analytics.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Daily Sales</relationshipLabel>
        <relationshipName>Daily_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Backlog_Amount__c</fullName>
        <label>Backlog Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Backlog_Quantity__c</fullName>
        <label>Backlog Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Amount__c</fullName>
        <description>Dollar Value of the Billing.</description>
        <inlineHelpText>Dollar Value of the Billing.</inlineHelpText>
        <label>Bill Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Quantity__c</fullName>
        <description>Quantity bought.</description>
        <inlineHelpText>Quantity bought.</inlineHelpText>
        <label>Bill Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Book_Amount__c</fullName>
        <description>Dollar Value of Booking.</description>
        <inlineHelpText>Dollar Value of Booking.</inlineHelpText>
        <label>Book Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Book_Quantity__c</fullName>
        <description>Quantity Booked.</description>
        <inlineHelpText>Quantity Booked.</inlineHelpText>
        <label>Book Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBC1_Code__c</fullName>
        <label>CBC1 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC1__c</fullName>
        <description>Used to organize products into groups. Concatenate unless needs to be broken out for related objects. (ie. CBC1Code - CBC1Name).</description>
        <label>CBC1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>13075</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CBC2_Code__c</fullName>
        <label>CBC2 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC2__c</fullName>
        <description>Used to organize products into groups. Concatenate unless needs to be broken out for related objects. (ie. CBC2Code - CBC2Name)</description>
        <label>CBC2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Number__c</fullName>
        <description>Customer Account Number in format 1082:12345678 from SAP.</description>
        <inlineHelpText>Account Number from SAP for the Sale, in the format 1234:12345678.</inlineHelpText>
        <label>Customer Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_City__c</fullName>
        <description>Address Field: City for the Customer Account.</description>
        <label>Customer City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Classification__c</fullName>
        <description>Customer Classification Code (A, B, C, or D)</description>
        <inlineHelpText>Customer Classification Code (A, B, C, or D) of the Customer making the purchase.</inlineHelpText>
        <label>Customer Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Country__c</fullName>
        <description>Address Field: Country of the Customer. (ie. CN, US, etc.)</description>
        <label>Customer Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_State__c</fullName>
        <description>Address Field: State for the Customer.</description>
        <label>Customer State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAM_Code__c</fullName>
        <description>Concatenation of GAM Code and GAM Name. (ie. G016 - IBM)</description>
        <inlineHelpText>GAM for the Sale.</inlineHelpText>
        <label>GAM Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAM__c</fullName>
        <description>Concatenation of GAM Code and GAM Name.</description>
        <inlineHelpText>GAM Code + GAM Name.</inlineHelpText>
        <label>GAM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>G016 - IBM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GIBU_Owner__c</fullName>
        <description>Name of the GIBU in CIS that owns this sale. Channel, DataComm, Industrail, or Solar.</description>
        <inlineHelpText>Name of the GIBU that owns this sale.</inlineHelpText>
        <label>GIBU Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>DataComm</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Solar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GPL_Code__c</fullName>
        <description>Global Product Line. (ie. 012)</description>
        <inlineHelpText>Global Product Line Code.</inlineHelpText>
        <label>GPL Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPL__c</fullName>
        <description>Concatenation of GPL Code and GPL Description. 
(ie. GPLCode - GPLName)</description>
        <inlineHelpText>GPL Code + GPL Name</inlineHelpText>
        <label>GPL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBC_Code__c</fullName>
        <description>The Customer&apos;s Industry Business Code.</description>
        <inlineHelpText>The Customer&apos;s Industry Business Code. Used to determine what profit center gets credit for the sale.</inlineHelpText>
        <label>IBC Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBC__c</fullName>
        <description>Industry Business Code. Concatenate unless needs to be broken out for related objects. 
(ie. IndsutryBusinessCode - IndustryName)</description>
        <inlineHelpText>IBC Code + IBC Name</inlineHelpText>
        <label>IBC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>022 - Distribution &amp; Sub-Contractor</fullName>
                </value>
                <value>
                    <fullName>105 - Solar Solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Code__c</fullName>
        <inlineHelpText>Industry Code like 0228</inlineHelpText>
        <label>Industry Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <inlineHelpText>Industry Code + Industry Name</inlineHelpText>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0228 - DataComm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <description>Part Number + Part Description</description>
        <inlineHelpText>Part Number + Part Description</inlineHelpText>
        <label>Part Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center__c</fullName>
        <inlineHelpText>The Profit Center that got credit for this Sale.</inlineHelpText>
        <label>Profit Center</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALT - Solar</fullName>
                </value>
                <value>
                    <fullName>CSD - Consumer Devices</fullName>
                </value>
                <value>
                    <fullName>CSS - CIS-Shared Support Services</fullName>
                </value>
                <value>
                    <fullName>DTC - Data Communications</fullName>
                </value>
                <value>
                    <fullName>IND - Industrial</fullName>
                </value>
                <value>
                    <fullName>LTG - Lighting</fullName>
                </value>
                <value>
                    <fullName>MED - Medical</fullName>
                </value>
                <value>
                    <fullName>PLY - Circuit Protection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>The Region listed for the Sale.</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TCPN__c</fullName>
        <label>TCPN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TE_Part_Key_Id__c</fullName>
        <externalId>true</externalId>
        <label>TE Part Key Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Code__c</fullName>
        <label>Territory Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <description>Concatenation of A6 code and User FirstName &amp; LastName. (ie. A001234 - Bill Smith)</description>
        <inlineHelpText>Territory Code + Territory Name</inlineHelpText>
        <label>Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <inlineHelpText>Transaction Date for the Sale.</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Worldwide_Account_Number__c</fullName>
        <label>Worldwide Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Worldwide_Account__c</fullName>
        <description>Concatenation of WW Acct. Number and WW Acct. Name. (ie. 00000307 - IBM)</description>
        <inlineHelpText>WW Acct Number + WW Acct Name</inlineHelpText>
        <label>Worldwide Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Daily Sales</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer_Account_Number__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Profit_Center__c</columns>
        <columns>Bill_Amount__c</columns>
        <columns>Book_Amount__c</columns>
        <columns>Backlog_Amount__c</columns>
        <columns>Transaction_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DS-{000000000}</displayFormat>
        <label>Daily Sales Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Sales</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>